# Github-app-semver

./: .env.example  .gitignore  Cargo.toml  README.md
src/lib/: lib.rs
src/lib/github/: app.rs  author.rs  commit.rs  enterprise.rs  mod.rs  organisation.rs  payload.rs  pusher.rs  repository.rs  sender.rs
src/lib/inbound/: http.rs
src/lib/inbound/http/: handlers.rs
